# example

./: .gitignore  README.md  config.ini  pyproject.toml
.github/workflows/: ci.yml
src/: hello.py  world.py
src/example/: hello.py  math.py  server.py  union.py  world.py
tests/: test_hello.py  test_math.py  test_union.py  test_world.py
tests/e2e/: test_server.py
